<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="@color/light_grey"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="149dp"

        android:layout_height="114dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/user_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"

        android:layout_height="91dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Username"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"

        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_icon"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/weight_textview"
        android:text="Weight"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"


        android:layout_marginTop="10dp"
        android:background="@color/button_light_grey"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"

        android:drawableLeft="@drawable/baseline_scale_24"
        android:drawablePadding="-85dp"
        android:paddingLeft="60dp"


        />

    <TextView
        android:id="@+id/height_text_view"
        android:text="Height"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@color/button_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"

        android:drawableLeft="@drawable/baseline_height_24"
        android:drawablePadding="-85dp"
        android:paddingLeft="60dp"
        />

    <TextView
        android:id="@+id/sex_text_view"
        android:text="Sex"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:background="@color/button_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"

        android:drawableLeft="@drawable/sharp_female_24"
        android:drawablePadding="-85dp"
        android:paddingLeft="60dp"
        />
    <TextView
        android:id="@+id/age_text_view"
        android:text="Age"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:background="@color/button_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"

        android:drawableLeft="@drawable/twotone_elderly_24"
        android:drawablePadding="-85dp"
        android:paddingLeft="60dp"
        />

    <EditText
        android:id="@+id/kg_edit_text"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/weight_hint"
        android:textAlignment="center"
        android:textColorHint="@color/button_light_grey"
        app:layout_constraintBottom_toBottomOf="@id/weight_textview"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="@id/weight_textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/weight_textview"
        app:layout_constraintVertical_bias="0.19999999"
        />
    <EditText
        android:id="@+id/height_edit_text"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/height_hint"
        android:textAlignment="center"
        android:textColorHint="@color/button_light_grey"
        app:layout_constraintBottom_toBottomOf="@id/height_text_view"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="@id/height_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/height_text_view"
        app:layout_constraintVertical_bias="0.19999999"
        />
    <EditText
        android:id="@+id/age_edit_text"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"

        android:textAlignment="center"
        android:textColorHint="@color/button_light_grey"
        app:layout_constraintBottom_toBottomOf="@id/age_text_view"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="@id/age_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/age_text_view"
        app:layout_constraintVertical_bias="0.19999999"
        android:hint="___________"
        />

    <Spinner
        android:id="@+id/sex_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_purple"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/sex_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sex_text_view"
        app:layout_constraintTop_toTopOf="@id/sex_text_view"
        android:translationZ="1dp"
        />

    <TextView
        android:id="@+id/selected_sex_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sex_textview_border"
        app:layout_constraintBottom_toBottomOf="@+id/sex_spinner"
        app:layout_constraintEnd_toEndOf="@+id/sex_spinner"
        app:layout_constraintTop_toTopOf="@+id/sex_spinner"

        android:hint="@string/sex_hint"
        android:textColorHint="@color/button_light_grey"
        android:gravity="center"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rating_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_text_view"
        app:layout_constraintVertical_bias="0.42000002" />

    <TextView
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Rate Us!"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"

        app:layout_constraintStart_toStartOf="@+id/ratingBar" />


</androidx.constraintlayout.widget.ConstraintLayout>